# WordleBrain

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
artifacts/: wordlebrain_model.mpk
src/: feedback.rs  game.rs  main.rs  model.rs  solver.rs  train.rs  wordlist.rs
web/: app.js  index.html  style.css
wordlebrain-core/: Cargo.toml
wordlebrain-core/src/: lib.rs  solver.rs  wordlist.rs
wordlebrain-core/tests/: core_tests.rs
wordlebrain-wasm/: Cargo.toml
wordlebrain-wasm/src/: lib.rs
