[workspace]
members = [".", "wordlebrain-core", "wordlebrain-wasm"]
resolver = "2"

[package]
name = "wordlebrain"
version = "0.1.0"
edition = "2024"

[features]
default = ["ndarray"]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
wordlebrain-core = { path = "wordlebrain-core" }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
burn = { version = "0.16", default-features = false, features = ["train", "metrics"] }