[package]
name = "wordlebrain-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wordlebrain-core = { path = "../wordlebrain-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"